Complete Readme, add favicon.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Démos Socket.IO by Sébastien Chopin</title>
+	<title>MultiBalls dashboard by Sébastien Chopin</title>
 	<meta name="description" content="Démonstration de la librairie Socket.IO pour le Toulouse JS.">
 	<style type="text/css">
 	html, body {
