--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Control the ball</title>
+	<title>Control the ball - MultiBalls</title>
 	<meta name="description" content="Démonstration de la librairie Socket.IO pour le Toulouse JS.">
 	<style type="text/css">
 	html, body {
@@ -16,6 +16,7 @@
 		text-align: center;
 		color: white;
 		font-size: 1.5em;
+		margin-top: 20px;
 	}
 	.color-picker canvas:active {
 		cursor: none;
