--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 	</style>
 </head>
 <body>
+	<a href="http://github.com/Atinux/MultiBalls"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/c641758e06304bc53ae7f633269018169e7e5851/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 	<div id="color-picker">Loading ball...</div>
 	<h2><a href="/dashboard.html" target="_blank">Go to dashboard</a></h2>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
